--- a/3-serverless-microservice-stack/requirements.txt
+++ b/3-serverless-microservice-stack/requirements.txt
@@ -1,10 +1,10 @@
-aws_cdk.core
-aws_cdk.aws_apigateway
-aws_cdk.aws_lambda
-aws_cdk.aws_s3
-aws_cdk.aws_s3_deployment
-aws_cdk.aws_dynamodb
-aws-cdk.aws_cloudformation
-aws-cdk.aws_lambda_event_sources
-aws-cdk.aws_events
-aws-cdk.aws_events_targets
+aws_cdk.core==1.27.0
+aws_cdk.aws_apigateway==1.27.0
+aws_cdk.aws_lambda==1.27.0
+aws_cdk.aws_s3==1.27.0
+aws_cdk.aws_s3_deployment==1.27.0
+aws_cdk.aws_dynamodb==1.27.0
+aws-cdk.aws_cloudformation==1.27.0
+aws-cdk.aws_lambda_event_sources==1.27.0
+aws-cdk.aws_events==1.27.0
+aws-cdk.aws_events_targets==1.27.0
