--- a/5-serverless-graphql-stack/backend/requirements.txt
+++ b/5-serverless-graphql-stack/backend/requirements.txt
@@ -1,9 +1,9 @@
-aws_cdk.core
-aws_cdk.aws_appsync
-aws_cdk.aws_rds
-aws_cdk.aws_iam
-aws_cdk.aws_secretsmanager
-aws_cdk.aws_lambda
-aws_cdk.aws_s3
-aws_cdk.aws_s3_deployment
-aws-cdk.aws_cloudformation
+aws_cdk.core==1.27.0
+aws_cdk.aws_appsync==1.27.0
+aws_cdk.aws_rds==1.27.0
+aws_cdk.aws_iam==1.27.0
+aws_cdk.aws_secretsmanager==1.27.0
+aws_cdk.aws_lambda==1.27.0
+aws_cdk.aws_s3==1.27.0
+aws_cdk.aws_s3_deployment==1.27.0
+aws-cdk.aws_cloudformation==1.27.0
