--- a/6-serverless-xray-stack/requirements.txt
+++ b/6-serverless-xray-stack/requirements.txt
@@ -1,9 +1,9 @@
-aws_cdk.core
-aws_cdk.aws_ec2
-aws_cdk.aws_ecs
-aws_cdk.aws_cloudformation
-aws_cdk.aws_lambda
-aws_cdk.aws_s3
-aws_cdk.aws_s3_deployment
-aws_cdk.aws_dynamodb
-aws_cdk.aws_elasticloadbalancingv2
+aws_cdk.core==1.27.0
+aws_cdk.aws_ec2==1.27.0
+aws_cdk.aws_ecs==1.27.0
+aws_cdk.aws_cloudformation==1.27.0
+aws_cdk.aws_lambda==1.27.0
+aws_cdk.aws_s3==1.27.0
+aws_cdk.aws_s3_deployment==1.27.0
+aws_cdk.aws_dynamodb==1.27.0
+aws_cdk.aws_elasticloadbalancingv2==1.27.0
