--- a/4-serverless-cicd-stack/visit-service-cicd/requirements.txt
+++ b/4-serverless-cicd-stack/visit-service-cicd/requirements.txt
@@ -1,13 +1,13 @@
-aws_cdk.core
-aws_cdk.aws_apigateway
-aws_cdk.aws_lambda
-aws_cdk.aws_s3
-aws_cdk.aws_s3_deployment
-aws_cdk.aws_dynamodb
-aws-cdk.aws_cloudformation
-aws-cdk.aws_lambda_event_sources
-aws-cdk.aws_events
-aws-cdk.aws_events_targets
-aws-cdk.aws_codepipeline_actions
-aws-cdk.aws_codebuild
-aws-cdk.aws_codecommit
+aws_cdk.core==1.27.0
+aws_cdk.aws_apigateway==1.27.0
+aws_cdk.aws_lambda==1.27.0
+aws_cdk.aws_s3==1.27.0
+aws_cdk.aws_s3_deployment==1.27.0
+aws_cdk.aws_dynamodb==1.27.0
+aws-cdk.aws_cloudformation==1.27.0
+aws-cdk.aws_lambda_event_sources==1.27.0
+aws-cdk.aws_events==1.27.0
+aws-cdk.aws_events_targets==1.27.0
+aws-cdk.aws_codepipeline_actions==1.27.0
+aws-cdk.aws_codebuild==1.27.0
+aws-cdk.aws_codecommit==1.27.0
